hb_task6_ws/log/build_2024-03-17_23-27-39/hb_taskbonus/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/akshar/eyrc_hb/hb_task6_ws/install/hb_taskbonus/lib/python3.10/site-packages/hb_taskbonus/controller1a.py", line 326
    global i,pen_down, run_complete
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'i' is used prior to global declaration

